Bug 434392 - message/global type, can't view it, must be associated to kmail --view
Summary: message/global type, can't view it, must be associated to kmail --view
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.16.3
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-03-14 11:42 UTC by Philippe ROUBACH
Modified: 2021-03-15 18:40 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.17.0
Sentry Crash Report:


Attachments
delivery failure mail (25.06 KB, application/mbox)
2021-03-14 11:42 UTC, Philippe ROUBACH
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Philippe ROUBACH 2021-03-14 11:42:40 UTC
Created attachment 136662 [details]
delivery failure mail

SUMMARY


STEPS TO REPRODUCE
1. add a gmail account
2. get a delivery failure mail
3. display its contents
4. there are 2 attached files "sans nom" (no name)

the first "sans nom" is well displayed in the body of the mail

the second "sans nom" is the mail not sent

OBSERVED RESULT

If you click on it then a text file is displayed

EXPECTED RESULT

If you click on it then a mail is displayed

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.21.2
KDE Frameworks Version: 5.80.0
Qt Version: 5.15.2
kde apps 20.12.3

ADDITIONAL INFORMATION

the property of the second "sans nom" file is : 
- type : message/global
- encoding : quoted/printable

I manually added an association "message/global" type according to open "*" with "kmail --view". This work well.
Comment 1 Laurent Montel 2021-03-15 18:40:53 UTC
Git commit d97e82b204eb8038f992704b405ad6ab44e5070b by Laurent Montel.
Committed on 15/03/2021 at 18:40.
Pushed by mlaurent into branch 'release/21.04'.

Fix Bug 434392 - message/global type, can't view it, must be associated to kmail --view
FIXED-IN: 5.17.0

M  +3    -0    messageviewer/src/viewer/viewer_p.cpp
M  +2    -0    mimetreeparser/src/utils/util.cpp

https://invent.kde.org/pim/messagelib/commit/d97e82b204eb8038f992704b405ad6ab44e5070b