Fix Bug 434392 - message/global type, can't view it, must be associated to kmail --view

BUG: 434392
FIXED-IN: 5.17.0